# mnmx

./: .env.example  .gitattributes  .gitignore  Anchor.toml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  ROADMAP.md  package-lock.json  package.json  pyproject.toml
.github/: CODEOWNERS  FUNDING.yml  SUPPORT.md  stale.yml
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: ci.yml  clippy.yml
benchmarks/: README.md
docs/: architecture.md  minimax-algorithm.md
engine/: Cargo.toml
engine/benches/: routing_bench.rs
engine/src/: constants.rs  error.rs  evaluator.rs  game_tree.rs  lib.rs  math.rs  mev.rs  minimax.rs  move_ordering.rs  path_discovery.rs  router.rs  scoring.rs  transposition.rs  types.rs  version.rs
engine/tests/: evaluator_test.rs  minimax_test.rs
examples/: swap-optimization.ts
sdk/: README.md
sdk/python/: MANIFEST.in
sdk/python/mnmx/: cli.py  client.py  config.py  exceptions.py  math_utils.py  (+4 more)
src/: constants.ts  index.ts
src/bridges/: adapter.ts
src/chains/: cache.ts
src/engine/: minimax.ts  move-ordering.ts
src/router/: cache.ts  index.ts  path-discovery.ts  scoring.ts
src/solana/: executor.ts  mev-detector.ts  state-reader.ts
src/types/: index.ts
src/utils/: bridge-priority.ts  fee-normalizer.ts  hash.ts  logger.ts  math.ts  quote-expiry.ts  search-stats.ts
tests/engine/: evaluator.test.ts  minimax.test.ts
tests/integration/: chain-config.test.ts
tests/router/: gas-multiplier.test.ts  scoring.test.ts  strategy-comparison.test.ts  zero-amount.test.ts
tests/solana/: pool-analyzer.test.ts
(+2 files in other folders)
